Задание №19 основы: Реализовать альтернативный сценарий регистрации нового пользователя в MantisBT

--- a/mantis_tests/local.properties
+++ b/mantis_tests/local.properties
@@ -2,3 +2,4 @@ web.baseUrl=http://localhost/mantisbt-2.27.0/mantisbt-2.27.0
 web.username=administrator
 web.password=root
 james.workingDir =D:/JAMES
+james.apiBaseUrl=http://localhost:8000
