Задание №19 основы2: Реализовать альтернативный сценарий регистрации нового пользователя в MantisBT

--- a/mantis_tests/local.properties
+++ b/mantis_tests/local.properties
@@ -3,3 +3,4 @@ web.username=administrator
 web.password=root
 james.workingDir =D:/JAMES
 james.apiBaseUrl=http://localhost:8000
+apiKey=xciyu6_AcQak2s8kUWWo9Lqv7pG_Fjt8
